--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
                 
             </li>
-            <li class="pokemon">
+            <!-- <li class="pokemon">
                 <span class="number">#002</span>
                 <span class="name">Ivysaur</span>
 
@@ -99,7 +99,7 @@
                     </ol>
                 <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/6.svg" alt="Charizard">
                 </div>
-            </li>
+            </li> -->
         </ol>
     </section>
 
