--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
 
             <!-- Pokemon here -->
         </ol>
+
+        <div class="pagination">
+            <button id="loadMoreButton" type="button">
+                Load More
+            </button>
+        </div>
     </section>
 
     
